@@ -20,12 +20,19 @@ my $prereqs  = {
     'Class::Usul' => 'v0.65.0',
     'Daemon::Control' => '0.001006',
     'Exporter::Tiny' => '0.042',
+    'FCGI' => '0.77',
+    'FCGI::ProcManager' => '0.25',
     'File::DataClass' => 'v0.66.0',
     'HTML::FormWidgets' => 'v0.23.0',
     'HTTP::Message' => '6.06',
     'JSON::MaybeXS' => '1.003005',
     'Moo' => '2.000001',
     'Plack' => '1.0036',
+    'Plack::Middleware::Debug' => '0.16',
+    'Plack::Middleware::Deflater' => '0.08',
+    'Plack::Middleware::FixMissingBodyInRedirect' => '0.12',
+    'Plack::Middleware::LogErrors' => '0.001',
+    'Plack::Middleware::Session' => '0.21',
     'SVG' => '2.64',
     'Try::Tiny' => '0.22',
     'Type::Tiny' => '1.000005',
