@@ -1,12 +1,19 @@
 requires "Class::Usul" => "v0.65.0";
 requires "Daemon::Control" => "0.001006";
 requires "Exporter::Tiny" => "0.042";
+requires "FCGI" => "0.77";
+requires "FCGI::ProcManager" => "0.25";
 requires "File::DataClass" => "v0.66.0";
 requires "HTML::FormWidgets" => "v0.23.0";
 requires "HTTP::Message" => "6.06";
 requires "JSON::MaybeXS" => "1.003005";
 requires "Moo" => "2.000001";
 requires "Plack" => "1.0036";
+requires "Plack::Middleware::Debug" => "0.16";
+requires "Plack::Middleware::Deflater" => "0.08";
+requires "Plack::Middleware::FixMissingBodyInRedirect" => "0.12";
+requires "Plack::Middleware::LogErrors" => "0.001";
+requires "Plack::Middleware::Session" => "0.21";
 requires "SVG" => "2.64";
 requires "Try::Tiny" => "0.22";
 requires "Type::Tiny" => "1.000005";
