@@ -1,5 +1,7 @@
 Revision history for Coverage::Server
 
+          - Fixed cache error when mtime file missing
+
 0.6.1     2015-12-20 20:52:43
           - Added a Daemon
           - Added Config default_route
